--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
         </div>
       </div>
       <div id="todo-list">
-        <div class="todo">
-          <h3>Estou fazendo alguma coisa...</h3>
+        <!--<div class="todo">
+          <h3>Task 1</h3>
           <button class="finish-todo">
             <i class="fa-solid fa-check"></i>
           </button>
@@ -70,7 +70,7 @@
           </button>
         </div>
         <div class="todo">
-          <h3>Estudar JavaScript</h3>
+          <h3>Task 2</h3>
           <button class="finish-todo">
             <i class="fa-solid fa-check"></i>
           </button>
@@ -80,7 +80,7 @@
           <button class="remove-todo">
             <i class="fa-solid fa-xmark"></i>
           </button>
-        </div>
+        </div>-->
       </div>
     </div>
     <script src="js/script.js"></script>
